src/objects/Reg_Inventory__c.object
<CustomObject>
    <fields>
        <fullName>CAS_Description__c</fullName>
        <label>CAS Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAS__c</fullName>
        <label>CAS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Inventory__c</fullName>
        <label>EC Inventory</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IECSC__c</fullName>
        <label>IECSC</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSCA__c</fullName>
        <label>TSCA</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Reg. Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CAS__c</columns>
        <columns>CAS_Description__c</columns>
        <columns>TSCA__c</columns>
        <columns>EC_Inventory__c</columns>
        <columns>IECSC__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000000000}</displayFormat>
        <label>RegInvID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reg. Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>